--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -595,3 +595,12 @@ pre tt:after {
     font-size: 100%;
   }
 }
+/* @media (prefers-color-scheme: dark) {
+  img {
+    opacity: .75;
+    transition: opacity .5s ease-in-out;
+  }
+  img:hover {
+    opacity: 1;
+  }
+} */
